# lox-language

./: README.md  grammar  script.lox
clox/: CMakeLists.txt  README.md  Taskfile.yaml  index.lox  program.lox
clox/include/: chunk.h  common.h  compiler.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
clox/src/: chuck.h  chunk.c  chunk.cpp  common.h  compiler.c  compiler.cpp  debug.c  debug.cpp  debug.h  main.c  main.cpp  memory.c  memory.cpp  memory.h  object.c  object.cpp  object.h  scanner.c  scanner.cpp  scanner.h  table.c  table.cpp  table.h  value.c  value.cpp  value.h  vm.c  vm.cpp  vm.h
jlox/: README.md  build.gradle.kts  grammar  script.lox  settings.gradle.kts
jlox/gradle/wrapper/: gradle-wrapper.properties
jlox/src/main/kotlin/: Main.kt
jlox/src/main/kotlin/construct/: Expr.kt  ExpressionVisitor.kt  Statement.kt  StatementVisitor.kt
jlox/src/main/kotlin/environment/: Environment.kt
jlox/src/main/kotlin/interpreter/: Interpreter.kt  (+3 more)
src/main/kotlin/: Lox.kt
src/main/kotlin/construct/: Expr.kt  Expression.kt  ExpressionVisitor.kt  Statement.kt  StatementVisitor.kt  Visitor.kt
src/main/kotlin/environment/: Environment.kt
src/main/kotlin/expression/: Expression.kt
src/main/kotlin/interpreter/: Interpreter.kt  LoxCallable.kt  LoxClass.kt  LoxFunction.kt  LoxInstance.kt  Return.kt
src/main/kotlin/lexer/: Lexer.kt  Token.kt  TokenType.kt
src/main/kotlin/parser/: AstPrinter.kt  Expression.kt  Parser.kt
src/main/kotlin/resolver/: ClassType.kt  FunctionType.kt  Resolver.kt
src/test/kotlin/parser/: AstPrinterTest.kt
(+11 files in other folders)
